--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
+  <title>Restaurant List</title>
 </head>
 <body>
-  {{{body}}}
+  <header>
+    <!-- navigation -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+            width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+          我的餐廳清單
+        </a>
+      </div>
+    </nav>
+  
+    <div class="banner"></div>
+  </header>
+  {{{ body }}}
+  <script src="/javascripts/bootstrap.js"></script>
 </body>
 </html>
