feat: link font awesome & style static files for style

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/bootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/fontawesome.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Restaurant List</title>
 </head>
 <body>
@@ -23,5 +25,6 @@
   </header>
   {{{ body }}}
   <script src="/javascripts/bootstrap.js"></script>
+  <script src="/javascripts/fontawesome.js"></script>
 </body>
 </html>
